--- a/filme.html
+++ b/filme.html
@@ -8,7 +8,7 @@
     <title>Trailer House of cards</title>
 </head>
 <body>
-    <div class="descricao-trailer">Trailer House of cards</div>
+    <div class="descricao-trailer">Trailer House of Cards</div>
 
       <iframe width="1000" height="562" src="https://www.youtube.com/embed/8QnMmpfKWvo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
